@@ -26,7 +26,7 @@ dependencies {
     implementation 'com.twelvemonkeys.imageio:imageio-webp:3.7.0'
     implementation 'com.twelvemonkeys.imageio:imageio-jpeg:3.7.0'
     implementation 'org.apache.maven:maven-artifact:3.8.3'
-    implementation 'org.kohsuke:github-api:1.301'
+    implementation 'org.kohsuke:github-api:1.135'
     implementation 'net.lingala.zip4j:zip4j:2.9.1'
     implementation 'io.github.palexdev:materialfx:11.12.0'
 }
@@ -46,6 +46,7 @@ jlink {
         additive = true
         requires "com.fasterxml.jackson.databind"
     }
+    options = ['--add-modules', 'jdk.crypto.ec']
     addExtraDependencies("javafx")
     launcher {
         name = 'cyoap'
